tests/NormalTests/paczka1/fuzzy1/23658727.err
Error in line 8: gBz S661 63,8
Error in line 19: yqRlsOsajJ S656 20,8
Error in line 29: gBz S656 49,7
